Scale menu position back to viewport in pepper plugin

pepper uses DIP, so it needs to be converted to viewport in use-zoom-for-dsf mode.

BUG=621943,485650
TEST=manual

Review-Url: https://codereview.chromium.org/2082893003
Cr-Commit-Position: refs/heads/master@{#401024}

Former-commit-id: 9373922b7d01101f232c6ccfdedefd76e338e3ab