content/renderer/pepper/renderer_ppapi_host_impl.cc
@@ -213,8 +213,10 @@ gfx::Point RendererPpapiHostImpl::PluginPointToRenderFrame(
     // dedicated window.  So, do not offset the point.
     return pt;
   }
-  return gfx::Point(pt.x() + plugin_instance->view_data().rect.point.x,
-                    pt.y() + plugin_instance->view_data().rect.point.y);
+  return gfx::Point((pt.x() + plugin_instance->view_data().rect.point.x) /
+                        viewport_to_dip_scale_,
+                    (pt.y() + plugin_instance->view_data().rect.point.y) /
+                        viewport_to_dip_scale_);
 }
 
 IPC::PlatformFileForTransit RendererPpapiHostImpl::ShareHandleWithRemote(
